k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theratime-ingress
spec:
  rules:
    - host: theratime.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80
